--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="vue.js"></script>
+    <script src="./vue.js"></script>
     <script>
         const app = new Vue({
             data: {
